--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
     }
 
     environment {
-        registry= "pankajdevops2489/pythonapp"
+        registry= "queeki/pythonapp"
         AWS_ACCESS_KEY_ID = credentials('AWS_ACCESS_KEY')
         AWS_SECRET_ACCESS_KEY = credentials('AWS_SECRET_KEY')
         AWS_DEFAULT_REGION = "us-east-1"
